--- a/index.html
+++ b/index.html
@@ -182,7 +182,69 @@
                 </nav>
                 <div class="cart">
                     <i class="cart-icon fa-solid fa-cart-shopping"></i>
+                    <div class="cart-detail">
+                        <ul class="cart-list">
+                            <li class="cart-items">
+                                <div class="cart-content">
+                                    <img src="./assets/images/cart/cart-thumb-small.jpg" alt="cart items"
+                                         class="cart-img">
+                                    <div class="cart-items__info">
+                                        <h4 class="cart-items__name">cotton jump suits</h4>
+                                        <div class="cart-items__quantity">
+                                            <span class="cart-items__number">2</span>
+                                            <span class="cart-items__times">x</span>
+                                            <span class="cart-items__price">$15.00</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <span class="cart-items__delete">&times;</span>
+                            </li>
+                            <li class="cart-items">
+                                <div class="cart-content">
+                                    <img src="./assets/images/cart/cart-thumb-small-2.jpg" alt="cart items"
+                                         class="cart-img">
+                                    <div class="cart-items__info">
+                                        <h4 class="cart-items__name">crew neck U.S sweater</h4>
+                                        <div class="cart-items__quantity">
+                                            <span class="cart-items__number">2</span>
+                                            <span class="cart-items__times">x</span>
+                                            <span class="cart-items__price">$45.00</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <span class="cart-items__delete">&times;</span>
+                            </li>
+                            <li class="cart-items">
+                                <div class="cart-content">
+                                    <img src="./assets/images/cart/cart-thumb-small-3.jpg" alt="cart items"
+                                         class="cart-img">
+                                    <div class="cart-items__info">
+                                        <h4 class="cart-items__name">cross summer top</h4>
+                                        <div class="cart-items__quantity">
+                                            <span class="cart-items__number">2</span>
+                                            <span class="cart-items__times">x</span>
+                                            <span class="cart-items__price">$17.00</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <span class="cart-items__delete">&times;</span>
+                            </li>
+                        </ul>
+                        <div class="cart-total">
+                            <span class="cart-total__words">sub total</span>
+                            <span class="cart-total__price">$77.00</span>
+                        </div>
+
+                        <div class="cart-footer">
+                            <a href="#" class="cart-footer__view-cart">view cart</a>
+                            <button class="btn cart-footer__btn">
+                                <i class="cart-footer__icon fa-solid fa-check"></i>
+                                <span class="cart-footer__btn-words">Checkout</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="search">
                     <i class="search-icon fa-solid fa-magnifying-glass"></i>
                 </div>
@@ -225,37 +287,167 @@
         </div>
         <div class="feature-section feature2 black">
             <div class="feature-content__wrapper">
-                <img src="./assets/images/generic/feature-templates.jpg" alt="feature image" class="feature-img">
+                <img src="./assets/images/generic/feature-navigation.jpg" alt="feature image" class="feature-img">
             </div>
             <div class="feature-content">
                 <h2 class="feature-content__heading">
                     Beautiful Navigation
                 </h2>
-                <h3 class="feature-content__summary">Warhol offers several navgiation types that are functional yet beautiful.</h3>
-                <p class="feature-content__description">With multiple navigation types and a variety of ways to style headers, main menus, and auxiliary navigation, you can create a totally unique experience for your users.</p>
-                <button class="btn btn--black">View Layouts</button>
+                <h3 class="feature-content__summary">Warhol offers several navgiation types that are functional yet
+                    beautiful.</h3>
+                <p class="feature-content__description">With multiple navigation types and a variety of ways to style
+                    headers, main menus, and auxiliary navigation, you can create a totally unique experience for your
+                    users.</p>
+                <button class="btn btn--black">See Example</button>
             </div>
         </div>
         <div class="feature-section feature3 white">
             <div class="feature-content">
-                <h2 class="feature-content__heading">
-                    Refined
-                    <span class="feature-content__font">&</span>
-                    Professional</h2>
-                <h3 class="feature-content__summary">Build truly stunning layouts quickly by mixing pre-designed content
-                    blocks from different layouts. Simple!</h3>
-                <p class="feature-content__description">There are many multi-purpose templates; there are very few that
-                    have a strong emphasis on design. Warhol comes with a multitude of carfully designed page layouts,
-                    e-commerce layouts and purpose built content blocks that when pieced together create stunning,
-                    professional layouts. The possibilities are endless.</p>
-                <button class="btn btn--white">View Layouts</button>
+                <h2 class="feature-content__heading">Elegant Font Pairing</h2>
+                <h3 class="feature-content__summary">Elegant Font Pairing
+                    Professional design requires a careful attention to detail and typography.</h3>
+                <p class="feature-content__description">We know the importance of typography in layouts and have
+                    therefore carefully chosen a font pair that not only looks professional, but that presents your
+                    information in a sleek, modern fashion.</p>
+                <button class="btn btn--white">See Example</button>
             </div>
             <div class="feature-content__wrapper">
-                <img src="./assets/images/generic/feature-templates.jpg" alt="feature image" class="feature-img">
+                <img src="./assets/images/generic/feature-typo.jpg" alt="feature image" class="feature-img">
             </div>
         </div>
-        <!--            FEATIURES END-->
+        <div class="feature-section feature4 black">
+            <div class="feature-content__wrapper">
+                <img src="./assets/images/generic/feature-form-integration.jpg" alt="feature image" class="feature-img">
+            </div>
+            <div class="feature-content">
+                <h2 class="feature-content__heading">
+                    Contact Forms <span class="feature-content__font">&</span> Newsletter Integration
+                </h2>
+                <h3 class="feature-content__summary">Warhol comes with fully functional AJAX driven contact forms and
+                    newsletter forms.</h3>
+                <p class="feature-content__description">Create contact forms on the fly by simply adding/removing fields
+                    and select boxes that you require, without editing any JS or PHP code. Our Newsletter signup forms
+                    integrate seamlessly with MailChimp; all you need is your email, API key and list ID.</p>
+                <button class="btn btn--black">View Contact Pages</button>
+            </div>
+        </div>
+        <!--            FEATURES END-->
     </div>
+    <!--    HERO SECTION START-->
+    <div class="hero-section">
+        <div class="hero__heading">Homepage Layouts</div>
+        <div class="hero__grid">
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/agency.jpg" alt="layouts img" class="hero-items__img">
+                <div class="hero-items__overlay">
+                    <span class="hero-items__description">creative agency</span>
+                </div>
+            </div>
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/ecommerce.jpg" alt="layouts img" class="hero-items__img">
+                <div class="hero-items__overlay">
+                    <span class="hero-items__description">ecommerce</span>
+                </div>
+            </div>
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/small-business.jpg" alt="layouts img" class="hero-items__img">
+                <div class="hero-items__overlay">
+                    <span class="hero-items__description">small business</span>
+                </div>
+            </div>
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/photography.jpg" alt="layouts img" class="hero-items__img">
+                <div class="hero-items__overlay">
+                    <span class="hero-items__description">photography</span>
+                </div>
+            </div>
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/corporate.jpg" alt="layouts img" class="hero-items__img">
+                <div class="hero-items__overlay">
+                    <span class="hero-items__description">corporate</span>
+                </div>
+            </div>
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/showcase.jpg" alt="layouts img" class="hero-items__img">
+                <div class="hero-items__overlay">
+                    <span class="hero-items__description">fullscreen showcase</span>
+                </div>
+            </div>
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/personal.jpg" alt="layouts img" class="hero-items__img">
+                <div class="hero-items__overlay">
+                    <span class="hero-items__description">personal folio</span>
+                </div>
+            </div>
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/one-page.jpg" alt="layouts img" class="hero-items__img">
+                <div class="hero-items__overlay">
+                    <span class="hero-items__description">one page</span>
+                </div>
+            </div>
+            <div class="hero-items">
+                <img src="./assets/images/portfolio/coming-soon.jpg" alt="layouts img" class="hero-items__img">
+            </div>
+        </div>
+    </div>
+    <!--            HERO SECTION END-->
+    <!--    DISCOVER SECTION START-->
+    <div class="discover-section">
+        <h2 class="discover-section__heading">build a stunning website</h2>
+        <h3 class="discover-section__summary">Warhol is a complete design toolkit that gives you the tools you need to
+            create a unique and professional looking website for you or your client.</h3>
+        <div class="discover-section__grid">
+            <div class="discover-items">
+                <i class="discover-items__icon fa-solid fa-map"></i>
+                <div class="discover-items__info">
+                    <h3 class="discover-items__name">8 Homepages</h3>
+                    <p class="discover-items__description">Warhol comes with 8 different homepages and 8 unique hero
+                        sections that can easily be dropped into any section of any page.</p>
+                </div>
+            </div>
+            <div class="discover-items">
+                <i class="discover-items__icon fa-solid fa-table-cells"></i>
+                <div class="discover-items__info">
+                    <h3 class="discover-items__name">20+ Components</h3>
+                    <p class="discover-items__description">Make any design stand out by using a combination of the 20+
+                        components that come with Warhol. Accordions, tabs, buttons and much more.</p>
+                </div>
+            </div>
+            <div class="discover-items">
+                <i class="discover-items__icon fa-solid fa-plug"></i>
+                <div class="discover-items__info">
+                    <h3 class="discover-items__name">8+ Plugins</h3>
+                    <p class="discover-items__description">As with all our templates, Warhol comes with 8 premium
+                        in-house developed plugins, which means that when there's an update, you'll get it.</p>
+                </div>
+            </div>
+            <div class="discover-items">
+                <i class="discover-items__icon fa-solid fa-cubes"></i>
+                <div class="discover-items__info">
+                    <h3 class="discover-items__name">Block Based</h3>
+                    <p class="discover-items__description">Warhol, like all our templates, is built using a block based,
+                        responsive framework that makes designing easier. Move blocks around and get a new design.</p>
+                </div>
+            </div>
+            <div class="discover-items">
+                <i class="discover-items__icon fa-solid fa-dollar-sign"></i>
+                <div class="discover-items__info">
+                    <h3 class="discover-items__name">Ultimate Startup Pack</h3>
+                    <p class="discover-items__description">Warhol is a great starting point for startups that need a
+                        quick and simple solution when it comes to creating a site. Save both time & money.</p>
+                </div>
+            </div>
+            <div class="discover-items">
+                <i class="discover-items__icon fa-solid fa-infinity"></i>
+                <div class="discover-items__info">
+                    <h3 class="discover-items__name">Infinite Possibilities</h3>
+                    <p class="discover-items__description">With a range of pre-design content blocks, components and
+                        plugins, Sarte provides you with an unlimited number of possibilities.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--    DISCOVER SECTION END-->
     <!--        CONTENT END-->
 </div>
 </body>
