--- a/index.html
+++ b/index.html
@@ -332,122 +332,126 @@
             </div>
         </div>
         <!--            FEATURES END-->
-    </div>
-    <!--    HERO SECTION START-->
-    <div class="hero-section">
-        <div class="hero__heading">Homepage Layouts</div>
-        <div class="hero__grid">
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/agency.jpg" alt="layouts img" class="hero-items__img">
-                <div class="hero-items__overlay">
-                    <span class="hero-items__description">creative agency</span>
+        <!--    HERO SECTION START-->
+        <div class="hero-section">
+            <div class="hero__heading">Homepage Layouts</div>
+            <div class="hero__grid">
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/agency.jpg" alt="layouts img" class="hero-items__img">
+                    <div class="hero-items__overlay">
+                        <span class="hero-items__description">creative agency</span>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/ecommerce.jpg" alt="layouts img" class="hero-items__img">
-                <div class="hero-items__overlay">
-                    <span class="hero-items__description">ecommerce</span>
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/ecommerce.jpg" alt="layouts img" class="hero-items__img">
+                    <div class="hero-items__overlay">
+                        <span class="hero-items__description">ecommerce</span>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/small-business.jpg" alt="layouts img" class="hero-items__img">
-                <div class="hero-items__overlay">
-                    <span class="hero-items__description">small business</span>
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/small-business.jpg" alt="layouts img" class="hero-items__img">
+                    <div class="hero-items__overlay">
+                        <span class="hero-items__description">small business</span>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/photography.jpg" alt="layouts img" class="hero-items__img">
-                <div class="hero-items__overlay">
-                    <span class="hero-items__description">photography</span>
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/photography.jpg" alt="layouts img" class="hero-items__img">
+                    <div class="hero-items__overlay">
+                        <span class="hero-items__description">photography</span>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/corporate.jpg" alt="layouts img" class="hero-items__img">
-                <div class="hero-items__overlay">
-                    <span class="hero-items__description">corporate</span>
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/corporate.jpg" alt="layouts img" class="hero-items__img">
+                    <div class="hero-items__overlay">
+                        <span class="hero-items__description">corporate</span>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/showcase.jpg" alt="layouts img" class="hero-items__img">
-                <div class="hero-items__overlay">
-                    <span class="hero-items__description">fullscreen showcase</span>
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/showcase.jpg" alt="layouts img" class="hero-items__img">
+                    <div class="hero-items__overlay">
+                        <span class="hero-items__description">fullscreen showcase</span>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/personal.jpg" alt="layouts img" class="hero-items__img">
-                <div class="hero-items__overlay">
-                    <span class="hero-items__description">personal folio</span>
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/personal.jpg" alt="layouts img" class="hero-items__img">
+                    <div class="hero-items__overlay">
+                        <span class="hero-items__description">personal folio</span>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/one-page.jpg" alt="layouts img" class="hero-items__img">
-                <div class="hero-items__overlay">
-                    <span class="hero-items__description">one page</span>
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/one-page.jpg" alt="layouts img" class="hero-items__img">
+                    <div class="hero-items__overlay">
+                        <span class="hero-items__description">one page</span>
+                    </div>
                 </div>
-            </div>
-            <div class="hero-items">
-                <img src="./assets/images/portfolio/coming-soon.jpg" alt="layouts img" class="hero-items__img">
-            </div>
-        </div>
-    </div>
-    <!--            HERO SECTION END-->
-    <!--    DISCOVER SECTION START-->
-    <div class="discover-section">
-        <h2 class="discover-section__heading">build a stunning website</h2>
-        <h3 class="discover-section__summary">Warhol is a complete design toolkit that gives you the tools you need to
-            create a unique and professional looking website for you or your client.</h3>
-        <div class="discover-section__grid">
-            <div class="discover-items">
-                <i class="discover-items__icon fa-solid fa-map"></i>
-                <div class="discover-items__info">
-                    <h3 class="discover-items__name">8 Homepages</h3>
-                    <p class="discover-items__description">Warhol comes with 8 different homepages and 8 unique hero
-                        sections that can easily be dropped into any section of any page.</p>
-                </div>
-            </div>
-            <div class="discover-items">
-                <i class="discover-items__icon fa-solid fa-table-cells"></i>
-                <div class="discover-items__info">
-                    <h3 class="discover-items__name">20+ Components</h3>
-                    <p class="discover-items__description">Make any design stand out by using a combination of the 20+
-                        components that come with Warhol. Accordions, tabs, buttons and much more.</p>
-                </div>
-            </div>
-            <div class="discover-items">
-                <i class="discover-items__icon fa-solid fa-plug"></i>
-                <div class="discover-items__info">
-                    <h3 class="discover-items__name">8+ Plugins</h3>
-                    <p class="discover-items__description">As with all our templates, Warhol comes with 8 premium
-                        in-house developed plugins, which means that when there's an update, you'll get it.</p>
-                </div>
-            </div>
-            <div class="discover-items">
-                <i class="discover-items__icon fa-solid fa-cubes"></i>
-                <div class="discover-items__info">
-                    <h3 class="discover-items__name">Block Based</h3>
-                    <p class="discover-items__description">Warhol, like all our templates, is built using a block based,
-                        responsive framework that makes designing easier. Move blocks around and get a new design.</p>
-                </div>
-            </div>
-            <div class="discover-items">
-                <i class="discover-items__icon fa-solid fa-dollar-sign"></i>
-                <div class="discover-items__info">
-                    <h3 class="discover-items__name">Ultimate Startup Pack</h3>
-                    <p class="discover-items__description">Warhol is a great starting point for startups that need a
-                        quick and simple solution when it comes to creating a site. Save both time & money.</p>
-                </div>
-            </div>
-            <div class="discover-items">
-                <i class="discover-items__icon fa-solid fa-infinity"></i>
-                <div class="discover-items__info">
-                    <h3 class="discover-items__name">Infinite Possibilities</h3>
-                    <p class="discover-items__description">With a range of pre-design content blocks, components and
-                        plugins, Sarte provides you with an unlimited number of possibilities.</p>
+                <div class="hero-items">
+                    <img src="./assets/images/portfolio/coming-soon.jpg" alt="layouts img" class="hero-items__img">
                 </div>
             </div>
         </div>
+        <!--            HERO SECTION END-->
+        <!--    DISCOVER SECTION START-->
+        <div class="discover-section">
+            <h2 class="discover-section__heading">build a stunning website</h2>
+            <h3 class="discover-section__summary">Warhol is a complete design toolkit that gives you the tools you need to
+                create a unique and professional looking website for you or your client.</h3>
+            <div class="discover-section__grid">
+                <div class="discover-items">
+                    <i class="discover-items__icon fa-solid fa-map"></i>
+                    <div class="discover-items__info">
+                        <h3 class="discover-items__name">8 Homepages</h3>
+                        <p class="discover-items__description">Warhol comes with 8 different homepages and 8 unique hero
+                            sections that can easily be dropped into any section of any page.</p>
+                    </div>
+                </div>
+                <div class="discover-items">
+                    <i class="discover-items__icon fa-solid fa-table-cells"></i>
+                    <div class="discover-items__info">
+                        <h3 class="discover-items__name">20+ Components</h3>
+                        <p class="discover-items__description">Make any design stand out by using a combination of the 20+
+                            components that come with Warhol. Accordions, tabs, buttons and much more.</p>
+                    </div>
+                </div>
+                <div class="discover-items">
+                    <i class="discover-items__icon fa-solid fa-plug"></i>
+                    <div class="discover-items__info">
+                        <h3 class="discover-items__name">8+ Plugins</h3>
+                        <p class="discover-items__description">As with all our templates, Warhol comes with 8 premium
+                            in-house developed plugins, which means that when there's an update, you'll get it.</p>
+                    </div>
+                </div>
+                <div class="discover-items">
+                    <i class="discover-items__icon fa-solid fa-cubes"></i>
+                    <div class="discover-items__info">
+                        <h3 class="discover-items__name">Block Based</h3>
+                        <p class="discover-items__description">Warhol, like all our templates, is built using a block based,
+                            responsive framework that makes designing easier. Move blocks around and get a new design.</p>
+                    </div>
+                </div>
+                <div class="discover-items">
+                    <i class="discover-items__icon fa-solid fa-dollar-sign"></i>
+                    <div class="discover-items__info">
+                        <h3 class="discover-items__name">Ultimate Startup Pack</h3>
+                        <p class="discover-items__description">Warhol is a great starting point for startups that need a
+                            quick and simple solution when it comes to creating a site. Save both time & money.</p>
+                    </div>
+                </div>
+                <div class="discover-items">
+                    <i class="discover-items__icon fa-solid fa-infinity"></i>
+                    <div class="discover-items__info">
+                        <h3 class="discover-items__name">Infinite Possibilities</h3>
+                        <p class="discover-items__description">With a range of pre-design content blocks, components and
+                            plugins, Sarte provides you with an unlimited number of possibilities.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn--blue btn--center">Purchase Warhol Now</button>
+        </div>
+        <!--    DISCOVER SECTION END-->
+<!--        FOOTER START-->
+
     </div>
-    <!--    DISCOVER SECTION END-->
+
     <!--        CONTENT END-->
 </div>
 </body>
