ADD-ON: footer section

--- a/index.html
+++ b/index.html
@@ -393,7 +393,8 @@
         <!--    DISCOVER SECTION START-->
         <div class="discover-section">
             <h2 class="discover-section__heading">build a stunning website</h2>
-            <h3 class="discover-section__summary">Warhol is a complete design toolkit that gives you the tools you need to
+            <h3 class="discover-section__summary">Warhol is a complete design toolkit that gives you the tools you need
+                to
                 create a unique and professional looking website for you or your client.</h3>
             <div class="discover-section__grid">
                 <div class="discover-items">
@@ -408,7 +409,8 @@
                     <i class="discover-items__icon fa-solid fa-table-cells"></i>
                     <div class="discover-items__info">
                         <h3 class="discover-items__name">20+ Components</h3>
-                        <p class="discover-items__description">Make any design stand out by using a combination of the 20+
+                        <p class="discover-items__description">Make any design stand out by using a combination of the
+                            20+
                             components that come with Warhol. Accordions, tabs, buttons and much more.</p>
                     </div>
                 </div>
@@ -424,8 +426,10 @@
                     <i class="discover-items__icon fa-solid fa-cubes"></i>
                     <div class="discover-items__info">
                         <h3 class="discover-items__name">Block Based</h3>
-                        <p class="discover-items__description">Warhol, like all our templates, is built using a block based,
-                            responsive framework that makes designing easier. Move blocks around and get a new design.</p>
+                        <p class="discover-items__description">Warhol, like all our templates, is built using a block
+                            based,
+                            responsive framework that makes designing easier. Move blocks around and get a new
+                            design.</p>
                     </div>
                 </div>
                 <div class="discover-items">
@@ -448,8 +452,59 @@
             <button class="btn btn--blue btn--center">Purchase Warhol Now</button>
         </div>
         <!--    DISCOVER SECTION END-->
-<!--        FOOTER START-->
-
+        <!--        FOOTER START-->
+        <footer class="footer-section">
+            <div class="footer-content">
+                <div class="footer-content__items">
+                    <h4 class="footer-content__heading">about</h4>
+                    <p class="footer-content__words">There are many multi-purpose templates; there are very few that
+                        have a strong emphasis on design. Warhol comes with a multitude of carfully designed page
+                        layouts and purpose built content blocks that when pieced together create stunning, professional
+                        layouts. The possibilities are endless. Warhol is simple, elegent and powerful!</p>
+                </div>
+                <div class="footer-content__items">
+                    <h4 class="footer-content__heading">warhol news</h4>
+                    <div class="footer-content__links">
+                        <div class="footer-content__links-items">
+                            <p class="footer-content__links-items-name">Our New Los Angeles Office</p>
+                            <p class="footer-content__links-items-time">27 JUL 2014</p>
+                        </div>
+                        <div class="footer-content__links-items">
+                            <p class="footer-content__links-items-name">Tutorial - Hidden Gems of Sublime</p>
+                            <p class="footer-content__links-items-time">02 JUN 2014</p>
+                        </div>
+                        <div class="footer-content__links-items">
+                            <p class="footer-content__links-items-name">Design Rules - Getting Back to Basics</p>
+                            <p class="footer-content__links-items-time">15 MAY 2014</p>
+                        </div>
+                        <div class="footer-content__links-items">
+                            <p class="footer-content__links-items-name">New Team Member - Jason Adams</p>
+                            <p class="footer-content__links-items-time">15 MAY 2014</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-content__items">
+                    <h4 class="footer-content__heading">the archives</h4>
+                    <div class="footer-content__links">
+                        <p class="footer-content__links-name">February 2016</p>
+                        <p class="footer-content__links-name">December 2015</p>
+                        <p class="footer-content__links-name">November 2014</p>
+                        <p class="footer-content__links-name">April 2014</p>
+                        <p class="footer-content__links-name">February 2014</p>
+                        <p class="footer-content__links-name">January 2014</p>
+                    </div>
+                </div>
+                <div class="footer-content__items">
+                    <h4 class="footer-content__heading">never miss updates</h4>
+                    <p class="footer-content__words">Want to be notified when we launch a new template or an udpate.
+                        Just sign up and we'll send you a notification by email.
+                    </p>
+                    <input type="email" id="footer-content__email" placeholder="Email address">
+                    <button class="btn">Signup</button>
+                    <p class="footer-content__warning">No spamming here.</p>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <!--        CONTENT END-->
