Fully UX for Search Section and Navbar Mobile

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
         <!-- MOBILE NAVBAR -->
         <div class="navbar--mobile">
             <div class="navbar__overlay--mobile"></div>
+            <div class="navbar__list-outzone--mobile"></div> 
             <nav class="navbar__list--mobile">
                 <li class="navbar__items--mobile">
                     <a href="#" class="navbar__items-links--mobile">demos</a>
@@ -630,10 +631,14 @@
         <!--        CONTENT END-->
         <!-- SEARCH SECTION -->
         <div class="search-section">
-            <input type="text" class="search-section__input " placeholder="TYPE & HIT ENTER...">
-            <p class="search-section__close">
-                close
-            </p>
+            <div class="search-section__outsideZone"></div>
+            <div class="search-input-wrapper">
+                <input type="text" class="search-section__input " placeholder="TYPE & HIT ENTER...">
+                <p class="search-section__close">
+                    close
+                </p>
+            </div>
+            <div class="search-section__outsideZone"></div>
         </div>
         <!-- SEARCH SECTION END-->
         <!-- SCROLL TO TOP BUTTON -->
