defer for script

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
         </a>
         <!-- SCROLL TO TOP BUTTON END -->
     </div>
-    <script src="./assets/js/index.js"></script>
+    <script defer src="./assets/js/index.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
